kubernetes/3_admin/1_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse-admin
  namespace: synapse-admin
spec:
  selector:
    app: synapse-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
